--- a/app/globals.css
+++ b/app/globals.css
@@ -2,61 +2,134 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Zen+Antique+Soft&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Urbanist:wght@100&display=swap");
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 @layer base {
   :root {
+    --color-one: rgb(105, 108, 255);
+    --color-one-light: rgb(101, 104, 255);
+    --color-two: rgb(113, 221, 55);
+    --color-two-light: rgb(209, 244, 190);
+    --color-three: rgb(255, 62, 29);
+    --color-three-light: rgb(253, 121, 98);
+    --color-four: rgb(255, 171, 0);
+    --color-four-light: rgb(255, 230, 179);
+    --color-five: rgb(3, 195, 236);
+    --color-five-light: rgb(179, 241, 254);
+
+    --color-one-hsl: 238.8, 100%, 70.59%;
+    --color-two-hsl: 99.04, 70.94%, 54.12%;
+    --color-three-hsl: 8.76, 100%, 55.69%;
+    --color-four-hsl: 40.24, 100%, 50%;
+    --color-five-hsl: 190.56, 97.49%, 46.86%;
+
+    --theme: rgb(105, 108, 255);
+    --theme-light:rgb(176, 178, 252) ;
+
+    --white-black: rgb(0, 0, 0);
+
+    --textbold: rgb(77, 95, 113);
+    --textlight: rgb(179, 187, 195);
+
+    --theme-foreground: #fff;
+    --theme-background: #f5f5f9;
+
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
+
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
+
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
+
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
+
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
+
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
+
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
+
     --radius: 0.5rem;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
   }
 
   .dark {
+    --theme-foreground: #2b2c40;
+    --theme-background: #232333;
+
+    --theme: #fff;
+    --theme-light: rgb(255, 224, 219);
+
+    --white-black: rgb(255, 255, 255);
+
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
+
+    --textbold: rgb(197, 197, 213);
+    --textlight: rgb(147, 148, 166);
+
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
+
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
+
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
+
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
+
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
+
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
   }
+}
+
+.font-zen {
+  font-family: "Zen Antique Soft", serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.font-yeseva {
+  font-family: "Yeseva", serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.font-roboto {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
 @layer base {
